chore: add projects page button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <p style="font-style: italic; font-size: 14px;" class="center-x stack-sans-notch">
         Autism • Polyglot Programmer • Arch Linux • Junior in High School
     </p>
+    <p style="font-style: italic; font-size: 14px;" class="center-x stack-sans-notch">
+        <a href="https://lily.transgirls.win/projects">
+            View my portfolio :3
+        </a>
+    </p>
 
     <!-- Center of page -->
     <div class="center-x center-y">
