Update YouTube link to new channel

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 GitHub
             </a> • <a href="https://discord.com/users/1002377371892072498">
                 Discord
-            </a> • <a href="https://www.youtube.com/@lily-sily">
+            </a> • <a href="https://www.youtube.com/@transicle">
                 YouTube
             </a> • <a href="https://www.roblox.com/users/3805519155/profile">
                 Roblox
