fix: update youtube url

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <p style="font-style: italic; font-size: 14px;" class="center-x stack-sans-notch">
         Autism • Polyglot Programmer • Arch Linux • Junior in High School
     </p>
-    <p style="font-style: italic; font-size: 14px;" class="center-x stack-sans-notch">
+    <!-- <p style="font-style: italic; font-size: 14px;" class="center-x stack-sans-notch">
         <a href="https://lily.transgirls.win/projects">
             View my portfolio :3
         </a>
-    </p>
+    </p> -->
 
     <!-- Center of page -->
     <div class="center-x center-y">
@@ -40,7 +40,7 @@
                 GitHub
             </a> • <a href="https://discord.com/users/1002377371892072498">
                 Discord
-            </a> • <a href="https://www.youtube.com/@lily-sily">
+            </a> • <a href="https://www.youtube.com/@transicle">
                 YouTube
             </a> • <a href="https://www.roblox.com/users/3805519155/profile">
                 Roblox
